--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p class="lead">Linh Vuu is a Senior IoT Consultant at IBM helping clients implement enterprise asset management platforms and 
               utilize Watson IoT product offerings to assist with data & technology transformation. In her previous client engagements, she has 
               assisted as either a data engineer or project manager. Linh has a Bachelors in Applied Economics & Management from Cornell University.
-              She currently lives in Austin, TX catering to her cat's every need. 
+              She currently lives in Austin, TX catering to her cat's every need. </p>
           </div>
 
           <div class="col-lg-3 ml-auto">
