Update index.html (#4)
* Update index.html

updated Linh's bio

* Update index.html

Co-authored-by: James Gan <jamesylgan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
             <img class="rounded-circle img-fluid mb-5 d-block mx-auto" src="http://redmond.app/img/linh.jpg" alt="">
           </div>
           <div class="col-lg-3 mr-auto">
-            <p class="lead">Linh Vuu is a Senior IoT Consultant at IBM with experience in investment banking.
-              Linh graduated cum laude from Cornell's Dyson School of Applied Economics and Management in 2018.</p>
+            <p class="lead">Linh Vuu is a Senior IoT Consultant at IBM helping clients implement enterprise asset management platforms and 
+              utilize Watson IoT product offerings to assist with data & technology transformation. In her previous client engagements, she has 
+              assisted as either a data engineer or project manager. Linh has a Bachelors in Applied Economics & Management from Cornell University.
+              She currently lives in Austin, TX catering to her cat's every need. </p>
           </div>
 
           <div class="col-lg-3 ml-auto">
